window: prevent infinite recursion in setQuickTileMode

If there's a window rule, setMaximize may not actually change the maximize mode, so this
needs to be accounted for

BUG: 493778